--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+*,*:after,*:before {
+
+    box-sizing: border-box;
+    
+    }
+    
 body {
     width: 1440px;
     margin: 0 auto;
@@ -5,30 +11,41 @@ body {
     font-family: "Roboto" , sans-serif;
 }
 
+
+
 .header-main {
     margin: 0;
     padding: 0;
+    margin-bottom: 0;
+    background-color: #EEEEEE;
 }
 
 .header-main__wrapper {
     display: flex;
+    height: 117px;
     margin: 0;
     padding: 0;
 }
 
+
+
 .header-main__logo-link {
     margin: 0;
     margin-left: 140px;
-    margin-top: 49px;
+    margin-top: 48.98px;
 }
 
 .header-main__logo-image {
     display: block;
 }
 
+
+
 .header-main__navigation {
-    margin-left: 202px;
-    margin-right: 246px;
+    max-width: 437px;
+    height: 30px;
+    margin-left: 202.13px;
+    margin-right: 285.84px;
     margin-top: 75px;
     margin-bottom: 9px;
 }
@@ -37,9 +54,9 @@ body {
     display: flex;
     margin: 0;
     padding: 0;
+    max-width: 437px;
+    height: 30px;
     list-style-type: none;
-    padding-top: 7px;
-    padding-bottom: 8px;
 }
 
 .header-main__navigation-list-item {
@@ -47,61 +64,193 @@ body {
     padding: 0;
     margin-left: 0;
     margin-right: 45px;
-    font-size: 16px;
-    text-transform: uppercase;
-    font-weight: 700;
+
 }
 
 .header-main__navigation-list-item:last-child {
     margin-right: 0;
+    max-width: 86px;
 }
 
+.header-main__navigation-list-item:first-child {
+    max-width: 63px;
+}
+
+.header-main__navigation-list-item:nth-child(2) {
+    max-width: 77px;
+}
+
+.header-main__navigation-list-item:nth-child(3) {
+    max-width: 76px;
+}
+
+
+
 .header-main__navigation-link {
-    display: block;
     text-decoration: none;
     color: black;
-    padding: 0;
+    height: 30px;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding-top: 7px;
+    padding-bottom: 8px;
+}
+
+.header-main__navigation-link:last-child {
+    max-width: 86px;
+}
+
+.header-main__navigation-link:first-child {
+    max-width: 63px;
+}
+
+.header-main__navigation-link:nth-child(2) {
+    max-width: 77px;
+}
+
+.header-main__navigation-link:nth-child(3) {
+    max-width: 76px;
 }
 
 .header-main__navigation-link:hover {
-    color:red;
+    color:#FB565A;
 }
 
 .header-main__navigation-link:active {
     color:grey;
 }
 
-.header-main__navigation-cart-link {
-    display: block;
-    box-sizing: border-box;
-    margin-top: 83px;
-    margin-right: 25px;
-    padding: 0;
-    text-decoration: none;
-    height: 15px;
-    width: 15px;
-}
+
 
 .header-main__navigation-cart {
     margin: 0;
     padding: 0;
-    padding-bottom: 8px;
+    max-width: 75px;
+    height: 30px;
     padding-top: 7px;
+    padding-bottom: 8px;
     margin-top: 75px;
-    margin-right: 140px;
+    margin-right: 140.16px;
     margin-bottom: 9px;
     font-size: 16px;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 500;
     text-decoration: none;
     color: black;
+    position: relative;
 }
 
-
+.header-main__navigation-cart::before {
+    content: '';
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    right: 98.84px;
+    background-image: url('../image/cart-icon.png');
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    margin-top: 1px;
+    z-index: 1;
+}
 .header-main__navigation-cart:hover {
-    color:red;
+    color:#FB565A;
 }
 
 .header-main__navigation-cart:active {
     color:grey;
+}
+
+.page-located {
+    text-decoration-line: underline;
+    text-decoration-color: #FB565A;
+    text-decoration-style: solid;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 12px;
+}
+
+
+.intro {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    max-width: 1440px;
+    background-color: #EEEEEE;
+
+}
+
+.intro-slider {
+    display: none;
+    height: 431px;
+    max-width: 1157px;
+    margin: 0;
+    margin-left: 140px;
+    margin-right: 143px;
+    padding-top: 78px;
+}
+
+.active-slider {
+    display: block;
+    position: relative;
+}
+
+.intro-slider__image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+}
+
+.intro-slider__title {
+    margin: 0;
+    padding: 0;
+    font-size: 55px;
+    font-weight: 500;
+    line-height: 55px;
+    max-width: 538px;
+    margin-bottom: 37px;
+}
+
+.intro-slider__description {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 416px;
+    margin-bottom: 38px;
+}
+
+.intro-slider__button {
+    display: block;
+    background-color:#FB565A;
+    max-width: 240px;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+    padding-top: 17px;
+    padding-bottom: 15px;
+    padding-left: 54px;
+    padding-right: 54px;
+}
+
+.intro-swipe {
+    position: absolute;
+    top: 0;
+    left: 676px;
+    top: 317px;
+    z-index: 2;
+}
+
+.intro-swipe__button {
+    width: 18px;
+    height: 18px;
+    border: none;
+    border-radius: 50%;
+    background-color:black;
+    margin-right: 17px;
 }
